--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 tela painel, na pagina main, colocar a imgem via banco de dados.
 
+echo $_SESSION['usuario']. '<hr>';
+echo $_SESSION['permissao']. '<hr>';
+echo $_SESSION['setor']. '<hr>';
+
 <!-- <div class="header">
     <div class="nav-bar">
            <label for="check">
